--- a/base/build.gradle
+++ b/base/build.gradle
@@ -46,4 +46,16 @@ dependencies {
     //Dagger2
     api "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    //网络请求依赖
+    api 'com.squareup.okio:okio:1.13.0'
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.3.0'
+
+    //RxJava
+    api "io.reactivex.rxjava2:rxjava:2.1.7"
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
 }
