图片加载测试成功

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':base')
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt 'com.github.bumptech.glide:compiler:4.6.1'
 }
