--- a/base/build.gradle
+++ b/base/build.gradle
@@ -31,8 +31,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -42,30 +41,25 @@ dependencies {
     api "org.jetbrains.anko:anko-commons:$anko_version"
     // Support-v4 (only Anko Commons)
     api "org.jetbrains.anko:anko-support-v4-commons:$anko_version"
-
     //Dagger2
     api "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-
     //网络请求依赖
     api 'com.squareup.okio:okio:1.13.0'
     api 'com.squareup.okhttp3:okhttp:3.8.1'
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-scalars:2.3.0'
-
     //RxJava
-    api "io.reactivex.rxjava2:rxjava:2.1.7"
+    api 'io.reactivex.rxjava2:rxjava:2.1.7'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
     //json解析
     api 'com.alibaba:fastjson:1.2.37'
-
     //Glide
     api 'com.github.bumptech.glide:glide:4.6.1'
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
-
     //BRVAH
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
-
+    api 'com.android.support:cardview-v7:27.1.1'
+    api 'com.android.support:recyclerview-v7:27.1.1'
 }
