--- a/base/build.gradle
+++ b/base/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //json解析
-    api 'com.alibaba:fastjson:1.2.37'
+    api 'com.google.code.gson:gson:2.8.2'
     //Glide
     api 'com.github.bumptech.glide:glide:4.6.1'
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
